Fix navbar alignment for mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,6 +105,15 @@ hr {
     .container {
         max-width: 83%
     }
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .actions {
+        display: flex;
+        justify-content: center;
+    }
 }
 
 .content ol {
